# sql-commander

./: pyproject.toml
.aiskills/: cli_commands_overview.md  project_overview.md  scripting_model.md
src/sql_commander/: main.py
src/sql_commander/db/: __init__.py  connection.py  views.py
src/sql_commander/lua/: __init__.py  engine.py  preprocessor.py
tests/: test_agnostic_cursors.py  test_dynamic_sql.py  test_engine.py  test_preprocessor.py  test_run_parameters.py
